# sdc-localization-scan-matching

./: .gitignore  README.md
.github/: copilot-instructions.md
Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Creating-ICP/: CMakeLists.txt  Makefile  icp  icp2-main.cpp
Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Creating-NDT/: CMakeLists.txt  Makefile  ndt  ndt-main.cpp
Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Intro-to-ICP/: icp1-main.cpp
Lesson_6_Utilizing_Scan_Matching/Exercise-ICP-Alignment/: CMakeLists.txt  Makefile  scan_matching_1  sm1-main.cpp
Lesson_6_Utilizing_Scan_Matching/Exercise-NDT-Alignment/: CMakeLists.txt  Makefile  scan_matching_2  sm2-main.cpp
Lesson_7_Project_Scan_Matching_Localization/: POSTMORTEM.md
Lesson_7_Project_Scan_Matching_Localization/c3-project/: CMakeLists.txt  Makefile  c3-main.cpp  libcarla-install.tar.xz  run_carla.sh  run_cloud_loc.sh
